Update secondary button disabled color for new identity
We forgot this case

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -38,6 +38,7 @@
   --button-secondary--background: var(--white);
   --button-secondary--border-color: var(--p4-dark-green-800);
   --button-secondary--color: var(--p4-dark-green-800);
+  --button-secondary--disabled--color: var(--p4-dark-green-800);
   --button-secondary--visited--color: var(--p4-dark-green-800);
   --button-secondary--hover--background: var(--p4-dark-green-800);
   --button-secondary--hover--border-color: var(--p4-dark-green-800);
