PLANET-6990 Apply the new style to body copy links (#1955)
- Applied new style to the body copy links to refelct new visual identity

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -122,15 +122,24 @@ table.spreadsheet-table.is-color-gp-green {
   }
 }
 
-a:where(.standalone-link) {
+.standalone-link {
   width: fit-content;
-  border-bottom: 2px solid var(--gp-green-500);
   font-weight: 700 !important;
-  transition: 0.3s cubic-bezier(0.5, 0, 0, 1);
+}
 
-  &:hover {
-    box-shadow: inset 0 calc(-22px) var(--gp-green-100);
-    text-decoration: none !important;
+// Body Copy links selectors
+.post-content,
+.page-content {
+  .standalone-link,
+  p > a,
+  li > a {
+    transition: 0.2s cubic-bezier(0.5, 0, 0, 1);
+    border-bottom: 2px solid var(--gp-green-500);
+
+    &:hover {
+      box-shadow: inset 0 calc(-22px) var(--gp-green-100);
+      text-decoration: none !important;
+    }
   }
 }
 
