--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -125,27 +125,27 @@ table.spreadsheet-table.is-color-gp-green {
   }
 }
 
-.standalone-link,
-.comment-reply-link {
-  width: fit-content;
-  border-bottom: 2px solid var(--gp-green-500);
-  font-weight: 700 !important;
-}
-
 // Body Copy links selectors
 .post-content,
 .page-content,
 .standalone-link,
+.comment-reply-link,
 p > a,
 li > a {
-  transition: 0.2s cubic-bezier(0.5, 0, 0, 1);
   border-bottom: 2px solid var(--gp-green-500);
+  transition: 0.2s cubic-bezier(0.5, 0, 0, 1);
 
   &:hover,
   &:focus {
     box-shadow: inset 0 calc(-22px) var(--gp-green-100);
     text-decoration: none !important;
   }
+}
+
+.standalone-link,
+.comment-reply-link {
+  width: fit-content;
+  font-weight: 700 !important;
 }
 
 // Colors for transparent buttons.
