--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -1,5 +1,16 @@
 @import "../base/tokens";
 
+@mixin shared-link-styles {
+  border-bottom: 2px solid var(--gp-green-500);
+  transition: 0.3s cubic-bezier(0.5, 0, 0, 1);
+
+  &:hover,
+  &:focus {
+    box-shadow: inset 0 calc(-22px) var(--gp-green-100);
+    text-decoration: none !important;
+  }
+}
+
 :root {
   --body--color: var(--grey-900);
   --site-footer--background: var(--p4-dark-green-800);
@@ -127,23 +138,17 @@ table.spreadsheet-table.is-color-gp-green {
 
 // Body Copy links selectors
 .post-content,
-.page-content,
-.standalone-link,
-.comment-reply-link,
-p > a,
-li > a {
-  border-bottom: 2px solid var(--gp-green-500);
-  transition: 0.2s cubic-bezier(0.5, 0, 0, 1);
-
-  &:hover,
-  &:focus {
-    box-shadow: inset 0 calc(-22px) var(--gp-green-100);
-    text-decoration: none !important;
+.page-content {
+  p > a,
+  li > a {
+    @include shared-link-styles;
   }
 }
 
 .standalone-link,
 .comment-reply-link {
+  @include shared-link-styles;
+
   width: fit-content;
   font-weight: 700 !important;
 }
