--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -13,10 +13,16 @@
                 <ul class="list-unstyled">
                     {% for primary in footer_primary_menu %}
                         <li>
-                            <a href="{{ primary.url }}"
+                            <a
+                                href="{{ primary.url }}"
                                 data-ga-category="Footer Navigation"
                                 data-ga-action="Footer Links"
-                                data-ga-label="{{ primary.title }}">
+                                data-ga-label="{{ primary.title }}"
+                                {% if ( primary.target is same as '_blank' ) %}
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                {% endif %}
+                            >
                                 {{ primary.title }}
                             </a>
                         </li>
@@ -24,10 +30,16 @@
 
                     {% for secondary in footer_secondary_menu %}
                         <li>
-                            <a href="{{ secondary.url }}"
+                            <a
+                                href="{{ secondary.url }}"
                                 data-ga-category="Footer Navigation"
                                 data-ga-action="Footer Links"
-                                data-ga-label="{{ secondary.title }}">
+                                data-ga-label="{{ secondary.title }}"
+                                {% if ( secondary.target is same as '_blank' ) %}
+                                    target="_blank"
+                                    rel="noopener noreferrer"
+                                {% endif %}
+                            >
                                 {{ secondary.title }}
                             </a>
                         </li>
