PLANET-7138: Remove text shadows on links (#1044)
* Remove text shadows on links

- This apply to SplitTwoColumns and CampaignCovers block
- Also change the yellow cta color to the campaign links
- Use the yellow-500 to the split two columns and the campaign covers links

---------

Co-authored-by: Dan Tovbein <dtovbein@gmail.com>

--- a/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
+++ b/assets/src/styles/blocks/Covers/styles/CampaignCovers.scss
@@ -82,7 +82,7 @@
 
         &:hover {
           &:before {
-            opacity: 0.1;
+            opacity: 0.3;
           }
         }
       }
@@ -94,10 +94,12 @@
       }
 
       .yellow-cta {
+        _-- {
+          color: $yellow;
+        }
         text-align: center;
         font-size: $font-size-md;
         font-family: var(--headings--font-family);
-        color: $yellow;
         font-weight: 500;
         position: absolute;
         left: 0;
@@ -105,7 +107,6 @@
         width: 100%;
         z-index: 2;
         margin-bottom: $sp-2;
-        text-shadow: 1px 1px $grey-80;
 
         @include medium-and-up {
           margin-bottom: 20px;
