Apply the new Source Sans 3 typeface
- Consolidate font sizes, font-family and line-height
- Blocks included:
* Links: Contextual navigation links, footer links, breadcrumbs
* Forms: Inputs, small paragraphs, checkbox label
* Comments Block: Inputs, short paragraphs, checkbox label and replies
* Card text description
* Footer copyright text
* Meta information: Author's name, date and article's read time
* Author Block
* Cookies box

--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -1,7 +1,9 @@
 .top-page-tags {
-  font-size: 16px;
+  _-- {
+    font-family: var(--headings--font-family);
+    font-size: 16px;
+  }
   margin-bottom: $sp-1;
-  font-family: var(--headings--font-family);
 
   .tag-wrap {
     display: inline;
