--- a/assets/src/scss/pages/post/_comments-form.scss
+++ b/assets/src/scss/pages/post/_comments-form.scss
@@ -49,8 +49,10 @@
   }
 
   #gdpr-comments-label {
+    _-- {
+      font-size: 14px;
+    }
     display: inline-block;
-    font-size: 14px;
   }
 }
 
