--- a/assets/src/scss/pages/search/_search-bar.scss
+++ b/assets/src/scss/pages/search/_search-bar.scss
@@ -15,10 +15,48 @@
     line-height: 2.75;
     appearance: none;
 
+    &::-webkit-search-decoration,
+    &::-webkit-search-cancel-button,
+    &::-webkit-search-results-button,
+    &::-webkit-search-results-decoration {
+      display: none;
+    }
+
+    // Hack to hide the input:-internal-autofill-selected style from webkit
+    &:-webkit-autofill,
+    &:-webkit-autofill:focus {
+      transition: background-color 600000s 0s, color 600000s 0s;
+    }
+
+    &:placeholder-shown ~ button.clear-search {
+      visibility: hidden;
+    }
+
     @include large-and-up {
       font-size: 1.125rem;
       height: 3em;
       line-height: 3;
+    }
+  }
+
+  .search-input-container {
+    display: flex;
+    position: relative;
+  }
+
+  .clear-search {
+    --clear--search-- {
+      background-color: $black;
+    }
+    mask: url("../../images/cross-circle.svg") 50% 50%/24px 24px no-repeat;
+    width: 24px;
+    position: absolute;
+    right: $sp-3;
+    top: 10px;
+    height: 24px;
+
+    @include large-and-up {
+      top: $sp-2;
     }
   }
 
