Refine new identity body links list selector
With the previous implementation the Submenu block links were also updated, but they shouldn't be

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -156,7 +156,8 @@ table.spreadsheet-table.is-color-gp-green {
 .post-content,
 .page-content {
   p > a,
-  li > a {
+  > ul li a,
+  > ol li a {
     @include shared-link-styles;
   }
 }
