--- a/templates/search.twig
+++ b/templates/search.twig
@@ -195,7 +195,7 @@
                                                 </button>
                                             {% endfor %}
                                         {% endfor %}
-                                        <button class="btn clearall">{{ __( 'Clear all', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
+                                        <button class="btn btn-secondary clearall">{{ __( 'Clear all', 'planet4-master-theme' ) }} <i class="icon-cross"></i></button>
                                     </div>
                                 </div>
                             {% endif %}
