--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -24,9 +24,11 @@
 
   ul {
     li {
+      --search-result-- {
+        border-bottom: 1px solid $grey-20;
+      }
       padding: 0 24px 32px 24px;
       margin: 0 auto 24px;
-      border-bottom: 1px solid $grey-20;
       position: relative;
       align-items: flex-start;
 
@@ -95,17 +97,19 @@
   }
 
   .search-results-alternative-label {
+    --search-results-alternative-label-- {
+      background: #97ed90;
+      color: var(--body--color);
+      font-weight: bold;
+      border-radius: 8px;
+    }
     display: none;
     width: auto;
     height: 40px;
     line-height: 40px;
     padding: 0 $sp-2;
     font-size: $font-size-sm;
-    font-weight: bold;
     text-align: center;
-    background: #97ed90;
-    border-radius: 8px;
-    color: var(--body--color);
     word-break: keep-all;
 
     &.search-results-alternative-label-mobile {
@@ -120,7 +124,7 @@
     }
 
     @include medium-and-up {
-      padding: 0 $sp-4;
+      padding: 0 $sp-3;
       display: block;
       width: auto;
       position: relative;
@@ -176,7 +180,9 @@
 }
 
 .search-result-item-info {
-  color: $grey-60;
+  _-- {
+    color: $grey-60;
+  }
   line-height: normal;
   margin-bottom: 10px;
   font-size: $font-size-xxs;
