Apply the new Greenpeace Sans typeface
- Includes headings and buttons
- Use as the font-family-primary token

--- a/assets/src/scss/layout/_cookies.scss
+++ b/assets/src/scss/layout/_cookies.scss
@@ -62,8 +62,10 @@
 .cookies-buttons {
   .btn {
     width: 100%;
-    line-height: 2.4;
-    font-size: 14px;
+    _-- {
+      line-height: 2.4;
+      font-size: 14px;
+    }
   }
 
   .btn-primary {
