Rename fonts variable names
Changed in bfa322e4181c7b7580606c2fa95aa13df65d8e8b

--- a/assets/src/scss/new-identity/_fonts.scss
+++ b/assets/src/scss/new-identity/_fonts.scss
@@ -1,9 +1,9 @@
 $bucket: "https://www.greenpeace.org/static/planet4-assets/";
 
 $fonts: (
-  #{$font-family-greenpeace-sans},
-  #{$font-family-source-sans-3},
-  #{$font-family-source-serif-pro},
+  #{$font-family-primary},
+  #{$font-family-secondary},
+  #{$font-family-tertiary},
 );
 
 @each $font in $fonts {
